--- a/css/demo.css
+++ b/css/demo.css
@@ -1,15 +1,6 @@
 /* General Blueprint Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-@font-face {
-	font-family: 'bpicons';
-	src:url('../fonts/bpicons/bpicons.eot');
-	src:url('../fonts/bpicons/bpicons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/bpicons/bpicons.woff') format('woff'),
-		url('../fonts/bpicons/bpicons.ttf') format('truetype'),
-		url('../fonts/bpicons/bpicons.svg#bpicons') format('svg');
-	font-weight: normal;
-	font-style: normal;
-} /* Made with http://icomoon.io/ */
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+
 
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 body, html { font-size: 100%; padding: 0; margin: 0;}
@@ -19,9 +10,8 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .clearfix:after { clear: both; }
 
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: #fff;
-    background: #47a3da;
+font-family: 'Titillium Web', sans-serif; color: #424242;
+    background: #04B4AE;
 }
 
 a {
@@ -38,7 +28,9 @@ a:hover {
 	max-width: 69em;
 	margin: 0 auto;
 	padding: 2.875em 1.875em 1.875em;
+	color: #FFFFFF
 }
+
 
 .container > header h1 {
 	font-size: 2.125em;
@@ -85,44 +77,8 @@ a:hover {
 	background: #fff;
 }
 
-.container > header nav {
-	float: right;
-	text-align: center;
-}
-
-.container > header nav a {
-	display: inline-block;
-	position: relative;
-	text-align: left;
-	width: 2.5em;
-	height: 2.5em;
-	background: #47a3da;
-	border-radius: 50%;
-	margin: 0 0.1em;
-	border: 4px solid #fff;
-}
-
-.container > header nav a > span {
-	display: none;
-}
-
-.container > header nav a:hover:before {
-	content: attr(data-info);
-	color: #fff;
-	position: absolute;
-	width: 600%;
-	top: 120%;
-	text-align: right;
-	right: 0;
-	pointer-events: none;
-}
-
-.container > header nav a:hover {
-	background: #fff;
-}
 
 .bp-icon:after {
-	font-family: 'bpicons';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -131,20 +87,6 @@ a:hover {
 	text-align: center;
 	color: #fff;
 	-webkit-font-smoothing: antialiased;
-}
-
-.container > header nav .bp-icon:after {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	line-height: 2;
-	text-indent: 0;
-}
-
-.container > header nav a:hover:after {
-	color: #47a3da;
 }
 
 .bp-icon-next:after {
@@ -165,18 +107,9 @@ a:hover {
 
 @media screen and (max-width: 55em) {
 
-	.container > header h1,
-	.container > header nav {
-		float: none;
-	}
-
 	.container > header > span,
 	.container > header h1 {
 		text-align: center;
-	}
-
-	.container > header nav {
-		margin: 0 auto;
 	}
 
 	.container > header > span {
